# brave-core

./: DEPS  package-lock.json  package.json
.github/: CODEOWNERS
android/: android_browser_tests.gni  brave_java_resources.gni  brave_java_sources.gni
app/: brave_generated_resources.grd  generated_resources.grd  profiles_strings.grdp  settings_strings.grdp  settings_strings_override.grdp
browser/: about_flags.cc  brave_content_browser_client.cc
components/: commerce_strings.grdp  plus_addresses_strings.grdp
components/ai_chat/distiller_scripts/: BUILD.gn
components/ai_chat/distiller_scripts/grit/: ai_chat_site_distiller_generated.h
components/ai_chat/distiller_scripts/scripts/: github.com.ts  x.com.ts
patches/: chrome-android-BUILD.gn.patch  chrome-android-chrome_java_sources.gni.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-browsing_data-chrome_browsing_data_remover_delegate.cc.patch  chrome-browser-extensions-BUILD.gn.patch  chrome-browser-extensions-api-identity-identity_get_auth_token_function.cc.patch  chrome-browser-extensions-extension_tab_util.cc.patch  chrome-browser-renderer_context_menu-render_view_context_menu.cc.patch  chrome-browser-resources-settings-BUILD.gn.patch  chrome-browser-resources-settings-privacy_page-privacy_page.html.patch  chrome-browser-resources-settings-privacy_page-privacy_page.ts.patch  chrome-browser-resources-settings-route.ts.patch  chrome-browser-resources-settings-router.ts.patch  chrome-browser-resources-settings-site_settings-constants.ts.patch  chrome-test-BUILD.gn.patch  (+27 more)
(+214 files in other folders)
